dil ingilizceye çevrildi arcade moda sharedpref eklenecek ve random kontrolü yapılacak tüm bölümler bitince patlaması engellendi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity android:name=".Oyun" />
         <activity android:name=".OyunSec" />
-        <activity android:name=".Arcade"></activity>
+        <activity android:name=".Arcade"/>
     </application>
 
 </manifest>
