--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.1" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.narcoding.dotpuzzle">
 
@@ -10,6 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="com.narcoding.dotpuzzle.MAIN" />
@@ -17,16 +18,20 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashScreen">
+        <activity android:name=".SplashScreen"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Oyun" />
-        <activity android:name=".OyunSec" />
-        <activity android:name=".Arcade"/>
+        <activity android:name=".Oyun"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".OyunSec"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Arcade"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
